# g4tutorial2024

./: .gitignore
P03_C++ForG4Users_Homework/C01_HelloWorld/: C01_HelloWorld.cc
P03_C++ForG4Users_Homework/C05_Inheritance_VirtualFunction/: C05_Inheritance_VirtualFunction.cc
P05_FirstStep/WaterBox/source/: Application_Main.cc  CMakeLists.txt
P05_FirstStep/WaterBox/source/.task/checksum/: cmake
P05_FirstStep/WaterBox/source/include/: Geometry.hh  PrimaryGenerator.hh  UserActionInitialization.hh
P05_FirstStep/WaterBox/source/src/: Geometry.cc
P06_Geometry/BGO_One/source/: Application_Main.cc  CMakeLists.txt
P06_Geometry/Pixel_Four/source/: Application_Main.cc  CMakeLists.txt
P06_Geometry/WaterBox/source/: CMakeLists.txt  Taskfile.yml
P06_Geometry/WaterBox/source/src/: Geometry.cc
P06_Geometry/WaterContainer/source/: Application_Main.cc  Taskfile.yml
P07_PrimaryGenerator/Gun/source/include/: PrimaryGenerator.hh
P07_PrimaryGenerator/Gun/source/src/: PrimaryGenerator.cc
P07_PrimaryGenerator/MyGen/source/: Taskfile.yml
P07_PrimaryGenerator/MyGen/source/include/: PrimaryGenerator.hh
P07_PrimaryGenerator/MyGen/source/src/: PrimaryGenerator.cc
P08_PhysicsLists/Factory/source/: Application_Main.cc
P08_PhysicsLists/MyPhysicsList/source/: .clang-tidy  Application_Main.cc
P08_PhysicsLists/Shielding/source/: Application_Main.cc
P09_Scoring1/BGO_Two_Output/source/: Application_Main.cc  P09.ipynb  P09_Output.csv  proton-eDep.csv
P09_Scoring1/BGO_Two_SD/source/: Taskfile.yml  proton-dDep.csv
P09_Scoring1/WaterBox_CBS/source/: Application_Main.cc
P10_Scoring2/Pixel_Four_Output/source/: Application_Main.cc  P10.ipynb  P10_Pixel_Four_Output.csv
(+13 files in other folders)
